--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                                 <a class="nav-link" href = "index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href = "ZackeryThomas93.github.io/Breakouthtml/" a>Breakout Game</a>
+                                    <a class="nav-link" href = "https://zackerythomas93.github.io/Breakouthtml/" a>Breakout Game</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href = "ZackeryThomas93.github.io/SpaceInvaderhtml/" a>Space Invaders</a>
