--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                                     <a class="nav-link" href = "https://zackerythomas93.github.io/Breakouthtml/" a>Breakout Game</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href = "ZackeryThomas93.github.io/SpaceInvaderhtml/" a>Space Invaders</a>
+                                    <a class="nav-link" href = "https://zackerythomas93.github.io/SpaceInvaderhtml/" a>Space Invaders</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href = "ZackeryThomas93.github.io/VirtualPet/"  a>Tag Examples</a>
+                                    <a class="nav-link" href = "https://zackerythomas93.github.io/VirtualPet/"  a>Virtual Pet</a>
                                  </li>
                                                                
                                 
