About me update

--- a/index.html
+++ b/index.html
@@ -94,12 +94,17 @@
             </header>
 
             <div class="about-me__body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                 incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-                 exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
-                  incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-                  exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>My name is Zackery Thomas, I have grown up in the golden age of games and
+                    technology advancement. Natrually this has led me into a passion for game production and design. 
+                    I started at Boise State University in 2019 and entered in to gaming, interactive media, and mobile
+                    development program (GIMM). Here I have learned many new skills, XR development in Swift, Unity, and Unreal.
+                    HTML, CSS, Javascript, C#, C++, Blueprint are some of the many languages I have learned for mobile and web development. 
+                </p>
+               <p>My goal is to find a project I am passionate about and a team to join in order to build something 
+                   to leave an impact in people's lives. I believe the best things I can bring to the table is my work ethic, drive 
+                   for accomplishment, coming in every day being the best I can be, and development of strong relations with others to 
+                   overcome the many challenges teams can face, whether in programming or life. 
+               </p>
             </div>
 
             <img src="Zackery-Page/2017-12-09 15.55.14.jpg" alt="Another image of Zackery" class="about-me__img">
@@ -126,12 +131,18 @@
                         <img src="Zackery-Page/ArcheryImage.png" alt="" class="portfolio__img">
                     </a>
                 </div>
+
+                <div class="portfolio">
+                    <a href="#" class="portfolio__item">
+                        <img src="Zackery-Page/MakerLabApp.jpg" alt="" class="portfolio__img">
+                    </a>
+                </div>
             </section>
 
 
             <!--Footer-->
             <footer class="footer">
-                <a href="Mailto:ZackThomas93@gmail.com" class="footer-link">ZackThomas93@gmail.com</a>
+                <a href="Mailto:info@ZackeryThomas.org" class="footer-link">info@ZackeryThomas.org</a>
                 <ul class="social-list">
                     <li class="social-list__item">
                         <a class="social-list__link" href="https://www.youtube.com/">
