home page update

--- a/index.html
+++ b/index.html
@@ -60,25 +60,28 @@
                 <h2 class="section__title section__title--services">What I do</h2>
                 <div class="services">
                     <div class="service">
-                    <h3>Physical Computing</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                    <h3>Games</h3>
+                    <p>My main passion is to develop games. Many of my projects are designed to learn the process 
+                        of creating games on many engines. I believe it is a powerful way to express naratives, 
+                        and innovate the way people see the world around them. 
                     </p>
                 </div> <!--service-->
 
                 <div class="service">
                     <h3>XR: VR, AR, and MR Development</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>I have put a large focus into the growing area of Augmented Reality and Virtual Reality
+                        as growning industry of entertainment. I have part taken in many projects using Mixed Reality 
+                        as you can view below on my works section.
+                    </p>
                 </div> <!--service-->
 
                 <div class="service">
                     <h3>Web Development</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>I have taken many web development courses in order to bring you the website 
+                        you are on now. HTML, CSS, and Javascript have been the main focus, 
+                        and in addition too basic coding I have been walking through systems such as Ionic
+                        using angular, to build projects using API's. 
+                    </p>
                 </div> <!--service-->
             </div> <!--services-->
             
@@ -142,7 +145,7 @@
 
             <!--Footer-->
             <footer class="footer">
-                <a href="Mailto:info@ZackeryThomas.org" class="footer-link">info@ZackeryThomas.org</a>
+                <a href="Mailto:info@ZackeryThomas.org" class="footer-link">Info@ZackeryThomas.org</a>
                 <ul class="social-list">
                     <li class="social-list__item">
                         <a class="social-list__link" href="https://www.youtube.com/">
