--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
                 <div class="portfolio">
                     <!--Portfolio item 01-->
-                    <a href="#" class="portfolio__item">
+                    <a href="Sneakurai.html" class="portfolio__item">
                         <img src="Zackery-Page/SneakImage.png" alt="" class="portfolio__img">
                     </a>
 
