--- a/Sneakurai-Page/Sneakurai.html
+++ b/Sneakurai-Page/Sneakurai.html
@@ -6,14 +6,14 @@
             <link rel='stylesheet' href='SneakuraiStyle.css'> 
             <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans
             +pro:300,900&display=swap" rel="stylesheet">
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
-            integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonumous" /> 
-            <script src="https://kit.fontawesome.com/2f366bb402.js" crossorigin="anonymous"></script>
-            <script src="https://kit.fontawesome.com/5e17eb84ca.js" crossorigin="anonymous"></script> 
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
             <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>           
+            <script src="https://kit.fontawesome.com/5e17eb84ca.js" crossorigin="anonymous"></script> 
+            <script src="https://kit.fontawesome.com/2f366bb402.js" crossorigin="anonymous"></script>        
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
+            integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonumous" />
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
           </head>
         <title>Sneakurai Page</title> 
         <body>
@@ -31,13 +31,13 @@
                             <a href="../index.html" class="nav-link">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Trailer</a>
+                            <a href="#services" class="nav-link">About this Game</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">About this Game</a>
+                            <a href="#about" class="nav-link">Development</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Development</a>
+                            <a href="#work" class="nav-link">My Work</a>
                         </li>
                     </ul> 
                     </div>
@@ -55,39 +55,17 @@
             <br>
             <!--About this Game-->
             <section class="sneak-about" id="services">
-                <h2 class="section__title section__title--services">What I do</h2>
+                <h2 class="section__title section__title--services">What is Sneakurai</h2>
                 <div class="services">
                     <div class="service">
-                    <h3>Games</h3>
-                    <p>My main passion is to develop games. Many of my projects are designed to learn the process 
-                        of creating games on many engines. I believe it is a powerful way to express naratives, 
-                        and innovate the way people see the world around them. 
-                    </p>
-                </div> <!--service-->
-
-                <div class="service">
-                    <h3>XR: VR, AR, and MR Development</h3>
-                    <p>I have put a large focus into the growing area of Augmented Reality and Virtual Reality
-                        as growning industry of entertainment. I have part taken in many projects using Mixed Reality 
-                        as you can view below on my works section.
-                    </p>
-                </div> <!--service-->
-
-                <div class="service">
-                    <h3>Web Development</h3>
-                    <p>I have taken many web development courses in order to bring you the website 
-                        you are on now. HTML, CSS, and Javascript have been the main focus, 
-                        and in addition too basic coding I have been walking through systems such as Ionic
-                        using angular, to build projects using API's. 
-                    </p>
-                </div> <!--service-->
-            </div> <!--services-->
+                    </div>
+                </div>               
             </section>
 
              <!--Development-->
         <section class="about-me" id="about">
             <header>
-            <h2 class="section__title section__title--about">Who I am</h2>
+            <h2 class="section__title section__title--about">Development</h2>
             <p class="section__subtitle section__subtitle--about"></p>
             </header>
 
@@ -105,7 +83,7 @@
                </p>
             </div>
 
-            <img src="2017-12-09 15.55.14.jpg" alt="Another image of Zackery" class="about-me__img">
+            <img src="SneakuraiSwing.gif" alt="Samurai" class="about-me__img">
             </section>
 
             <!--My Work-->
@@ -115,7 +93,7 @@
 
                 <div class="portfolio">
                     <!--Portfolio item 01-->
-                    <a href="Sneakurai-Page/Sneakurai.html" class="portfolio__item">
+                    <a href="#" class="portfolio__item">
                         <img src="SneakImage.png" alt="" class="portfolio__img">
                     </a>
 
@@ -128,13 +106,12 @@
                      <a href="#" class="portfolio__item">
                         <img src="ArcheryImage.png" alt="" class="portfolio__img">
                     </a>
-                </div>
+                
                     <!--Portfolio Item 04-->
-                <div class="portfolio">
                     <a href="#" class="portfolio__item">
                         <img src="MakerLabApp.jpg" alt="" class="portfolio__img">
                     </a>
-                </div>
+                 </div>
             </section>
 
                 <!--Footer-->
