--- a/index.html
+++ b/index.html
@@ -125,17 +125,17 @@
                     </a>
 
                      <!--Portfolio item 02-->
-                     <a href="#" class="portfolio__item">
+                     <a href="IceCatch-Page/IceCatch.html" class="portfolio__item">
                         <img src="Zackery-Page/IceCatchImage.png" alt="" class="portfolio__img">
                     </a>
 
                      <!--Portfolio item 03-->
-                     <a href="#" class="portfolio__item">
+                     <a href="Archery-Page/Archery.html" class="portfolio__item">
                         <img src="Zackery-Page/ArcheryImage.png" alt="" class="portfolio__img">
                     </a>
 
                     <!--Portfolio Item 04-->
-                    <a href="#" class="portfolio__item">
+                    <a href="MakerLabIFU-Page/MakerLabIFU.html" class="portfolio__item">
                         <img src="Zackery-Page/MakerLabApp.jpg" alt="" class="portfolio__img">
                     </a>
                 </div>
