--- a/Archery-Page/Archery.html
+++ b/Archery-Page/Archery.html
@@ -3,7 +3,7 @@
         <head>
             <meta charset="UTF-8">
             <meta name='viewport' content='width=device-width, initial-scale=1.0, shrink-to-fit=no'> 
-            <link rel='stylesheet' href='SneakuraiStyle.css'> 
+            <link rel='stylesheet' href='ArcheryStyle.css'> 
             <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans
             +pro:300,900&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
@@ -15,7 +15,7 @@
             integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonumous" />
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
           </head>
-        <title>Sneakurai Page</title> 
+        <title>Archery Page</title> 
         <body>
             <div class ="menu-bar">
                 <nav class="navbar navbar-dark navbar-expand-lg">
@@ -48,16 +48,32 @@
             <br>
             <br>
             <div class="center">    
-            <iframe width="960" height="480" src="https://www.youtube.com/embed/AhFhbRWShlo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="960" height="480" src="https://www.youtube.com/embed/q3NTmwio6OA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             </section>
             <br>
             <br>
             <!--About this Game-->
             <section class="sneak-about" id="services">
-                <h2 class="section__title section__title--services">What is Sneakurai</h2>
+                <h2 class="section__title section__title--services">About this Archery Project</h2>
                 <div class="services">
                     <div class="service">
+                        <p>My name is Zackery Thomas, I have grown up in the golden age of games and
+                            technology advancement. Natrually this has led me into a passion for game production and design. 
+                            I started at Boise State University in 2019 and entered in to gaming, interactive media, and mobile
+                            development program (GIMM). Here I have learned many new skills, XR development in Swift, Unity, and Unreal.
+                            HTML, CSS, Javascript, C#, C++, Blueprint are some of the many languages I have learned for mobile and web development. 
+                            My name is Zackery Thomas, I have grown up in the golden age of games and
+                            technology advancement. Natrually this has led me into a passion for game production and design. 
+                            I started at Boise State University in 2019 and entered in to gaming, interactive media, and mobile
+                            development program (GIMM). Here I have learned many new skills, XR development in Swift, Unity, and Unreal.
+                            HTML, CSS, Javascript, C#, C++, Blueprint are some of the many languages I have learned for mobile and web development. 
+                        </p>
+                    </div>
+                    <div class="service">
+                        <p>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/F34BkUXOMts" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </p>
                     </div>
                 </div>               
             </section>
@@ -83,7 +99,7 @@
                </p>
             </div>
 
-            <img src="SneakuraiSwing.gif" alt="Samurai" class="about-me__img">
+            <img src="Apple.gif" alt="Apple" class="about-me__img">
             </section>
 
             <!--My Work-->
@@ -93,7 +109,7 @@
 
                 <div class="portfolio">
                     <!--Portfolio item 01-->
-                    <a href="#" class="portfolio__item">
+                    <a href="../Sneakurai-Page/Sneakurai.html" class="portfolio__item">
                         <img src="SneakImage.png" alt="" class="portfolio__img">
                     </a>
 
@@ -103,7 +119,7 @@
                     </a>
 
                      <!--Portfolio item 03-->
-                     <a href="../Archery-Page/Archery.html" class="portfolio__item">
+                     <a href="../Archery-Page/#" class="portfolio__item">
                         <img src="ArcheryImage.png" alt="" class="portfolio__img">
                     </a>
                 
