--- a/MakerLabIFU-Page/MakerLabIFU.html
+++ b/MakerLabIFU-Page/MakerLabIFU.html
@@ -47,8 +47,10 @@
             <section>
             <br>
             <br>
-            <div class="center">    
+            <div class="center"> 
+                <div class="embed-responsive embed-responsive-16by9">   
                 <iframe width="960" height="480" src="https://www.youtube.com/embed/BW_sr54f-2M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
             </div>
             </section>
             <br>
