--- a/Archery-Page/Archery.html
+++ b/Archery-Page/Archery.html
@@ -48,7 +48,9 @@
             <br>
             <br>
             <div class="center">    
+                <div class="embed-responsive embed-responsive-16by9">
                 <iframe width="960" height="480" src="https://www.youtube.com/embed/q3NTmwio6OA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
             </div>
             </section>
             <br>
@@ -71,9 +73,11 @@
                         </p>
                     </div>
                     <div class="service">
+                        <div class="embed-responsive embed-responsive-16by9"><
                         <p>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/F34BkUXOMts" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </p>
+                        </div>
                     </div>
                 </div>               
             </section>
