--- a/IceCatch-Page/IceCatch.html
+++ b/IceCatch-Page/IceCatch.html
@@ -48,7 +48,9 @@
             <br>
             <br>
             <div class="center">    
+                <div class="embed-responsive embed-responsive-16by9">
                 <iframe width="960" height="480" src="https://www.youtube.com/embed/MSWmCPZiWiA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
             </div>
             </section>
             <br>
