--- a/Archery-Page/Archery.html
+++ b/Archery-Page/Archery.html
@@ -18,7 +18,7 @@
         <title>Archery Page</title> 
         <body>
             <div class ="menu-bar">
-                <nav class="navbar navbar-dark navbar-expand-lg">
+                <nav class="nav navbar-dark navbar-expand-lg">
                     <a class="navbar-brand">
                         Zackery Thomas
                     </a>
@@ -26,17 +26,17 @@
                         <span class="navbar-toggler-icon"></span> 
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
+                    <ul class="navbar-nav ml-auto nav__list">
+                        <li class="nav__item">
                             <a href="../index.html" class="nav-link">Home</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav__item">
                             <a href="#services" class="nav-link">About this Game</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav__item">
                             <a href="#about" class="nav-link">Development</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav__item">
                             <a href="#work" class="nav-link">My Work</a>
                         </li>
                     </ul> 
