--- a/MakerLabIFU-Page/MakerLabIFU.html
+++ b/MakerLabIFU-Page/MakerLabIFU.html
@@ -18,7 +18,7 @@
         <title>MakerLab Page</title> 
         <body>
             <div class ="menu-bar">
-                <nav class="navbar navbar-dark navbar-expand-lg">
+                <nav class="nav navbar navbar-dark navbar-expand-lg">
                     <a class="navbar-brand">
                         Zackery Thomas
                     </a>
@@ -27,16 +27,16 @@
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item">
+                        <li class="nav__item">
                             <a href="../index.html" class="nav-link">Home</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav__item">
                             <a href="#services" class="nav-link">About this Game</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav__item">
                             <a href="#about" class="nav-link">Development</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav__item">
                             <a href="#work" class="nav-link">My Work</a>
                         </li>
                     </ul> 
@@ -121,7 +121,7 @@
                     </a>
                 
                     <!--Portfolio Item 04-->
-                    <a href="../MakerLabIFU-Page/#" class="portfolio__item">
+                    <a href="#" class="portfolio__item">
                         <img src="MakerLabApp.jpg" alt="" class="portfolio__img">
                     </a>
                  </div>
