--- a/Archery-Page/Archery.html
+++ b/Archery-Page/Archery.html
@@ -9,8 +9,8 @@
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
             <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>           
-            <script src="https://kit.fontawesome.com/5e17eb84ca.js" crossorigin="anonymous"></script> 
-            <script src="https://kit.fontawesome.com/2f366bb402.js" crossorigin="anonymous"></script>        
+         <!--    <script src="https://kit.fontawesome.com/5e17eb84ca.js" crossorigin="anonymous"></script>
+           <script src="https://kit.fontawesome.com/2f366bb402.js" crossorigin="anonymous"></script>       -->  
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
             integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonumous" />
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
@@ -123,7 +123,7 @@
                     </a>
 
                      <!--Portfolio item 03-->
-                     <a href="../Archery-Page/#" class="portfolio__item">
+                     <a href="#" class="portfolio__item">
                         <img src="ArcheryImage.png" alt="" class="portfolio__img">
                     </a>
                 
