--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <span class="navbar-toggler-icon"></span> 
                     </button>
                     <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav ml-auto">
+                    <ul class="navbar-nav ml-auto nav__list">
                         <li class="nav__item">
                             <a href="index.html" class="nav-link">Home</a>
                         </li>
