--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <title>Zackery's Page</title> 
         <body>
             <div class ="menu-bar">
-                <nav class="nav navbar navbar-dark navbar-expand-lg">
+                <nav class="nav navbar-dark navbar-expand-lg">
                     <a class="navbar-brand">
                         Zackery Thomas
                     </a>
